# OneShare

./: README.md
app/: .metadata  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: home.dart
app/linux/: CMakeLists.txt
app/web/: index.html  manifest.json
app/windows/runner/: Runner.rc
backend/: Cargo.toml  index.ts  package.json  tsconfig.json
backend/services/: FirebaseRoomStore.ts  IRoomStore.ts  firebase.ts  lanDiscovery.ts  store.ts
backend/src/: main.rs  models.rs  state.rs  ws.rs
backend/utils/: instrument.ts  logger.ts  rateLimiter.ts  security.ts  turn.ts  validation.ts
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/: di.dart
frontend/lib/engine/: ffi_bindings.dart
frontend/lib/engine/serialization/: msg_pack_decoder.dart  msg_pack_encoder.dart
frontend/lib/src/: test.dart
frontend/lib/ui/: internet_mode_ui.dart  local_mode_ui.dart
frontend/linux/: CMakeLists.txt
frontend/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/linux/runner/: my_application.cc
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
