[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.32"
dashmap = "7.0.0-rc2"
fred = { version = "10.1.0", features = ["enable-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
bytes = "1.11.1"
nanoid = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
mimalloc = "0.1.48"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3

[profile.dev]
opt-level = 3
debug = true