[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
dashmap = "6.1.0"
fred = { version = "10.1.0", features = ["enable-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
bytes = "1.11.1"
nanoid = "0.4.0"
tracing-subscriber = "0.3.22"
mimalloc = "0.1.48"
dotenvy = "0.15.7"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 3
debug = true